--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
 
     <header>
+        <img src="media/chibi.png" alt="Chibi Image" class="corner-image">
+
         <nav class="navbar">
             <ul>
                 <li><a href="#podcast">Podcast</a></li>
                 <li><a href="#apropos">À propos</a></li>
-                <li><a href="#actualites">Actualités</a></li>
-                <li><a href="#notre-environnement">Analogies </a></li>
                 <li><a href="#analogies">Analogies</a></li>
             </ul>
         </nav>
