--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 
         <nav class="navbar">
             <ul>
+                <li><a href="#analogies">Corp/Ocean</a></li>
                 <li><a href="#podcast">Podcast</a></li>
                 <li><a href="#apropos">À propos</a></li>
-                <li><a href="#analogies">Analogies</a></li>
+                
             </ul>
         </nav>
         <div class="header-content">
