--- a/slider/slider.html
+++ b/slider/slider.html
@@ -21,8 +21,8 @@
     <!-- Conteneur principal -->
     <div class="slider-container">
         <div class="image-wrapper">
-            <img src="propre.jpg" alt="Avant" class="image-left">
-            <img src="pollution.jpg" alt="Après" class="image-right">
+            <img src="../media/propre.jpg" alt="Avant" class="image-left">
+            <img src="../media/pollution.jpg" alt="Après" class="image-right">
         </div>
 
         <input type="range" class="slider" min="0" max="100" value="50" id="slider">
