--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <li><a href="#analogies">Corp/Ocean</a></li>
                 <li><a href="#podcast">Podcast</a></li>
                 <li><a href="#pollution">Pollution</a></li>
+                <li><a href="clicker/cleanerClicker.html">Cleaner Clicker</a></li>
             </ul>
         </nav>
         <div class="header-content">
@@ -86,8 +87,8 @@
     </main>
 
     <footer>
-        <p>© 2024 Race for Water | La Nuit de l’Info</p>
-        <p><a href="https://ocean-climate.org">En savoir plus</a></p>
+        <p>© 2024 Race for Water | La Nuit de l’Info | À Médh'IUT</p>
+        <p><a href="https://www.raceforwater.org/fr/">En savoir plus</a></p>
     </footer>
 
     <script src="scripts.js"></script> <!-- Lien vers le fichier JavaScript -->
